--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
     "parse": "^4.2.0"
+    "@octokit/rest": "^18.12.0",
+    "@octokit/core": "4.2.0"
   }
 }
