--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.18.2",
-    "parse": "^4.2.0"
+    "parse": "^4.2.0",
     "@octokit/rest": "^18.12.0",
     "@octokit/core": "4.2.0"
   }
